Fixed the Overflow Issue on Main Slider in Homepage

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ html, body {
 	height: 100%;
 }
 
-#home .container {
+#homepage .container {
 	overflow: hidden;
 }
 
